--- a/photo-tagging-app/public/index.html
+++ b/photo-tagging-app/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,13 +12,6 @@
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <script defer src="/__/firebase/7.19.0/firebase-app.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/7.19.0/firebase-auth.js"></script>
-    <script defer src="/__/firebase/7.19.0/firebase-database.js"></script>
-    <script defer src="/__/firebase/7.19.0/firebase-messaging.js"></script>
-    <script defer src="/__/firebase/7.19.0/firebase-storage.js"></script>
-    <!-- initialize the SDK after all desired features are loaded -->
-    <script defer src="/__/firebase/init.js"></script>
+    <!-- built files will be auto injected -->
   </body>
 </html>
