--- a/photo-tagging-app/public/index.html
+++ b/photo-tagging-app/public/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="https://where-s-waldo-cf908.firebaseapp.com/">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Where's Waldo App</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but Where's Waldo App doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script type="text/javaScript" src="main.js"></script>
   </body>
 </html>
